--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,50 @@
+* {
+    box-sizing: border-box;
+  }
+  
+  html {
+    font-family: sans-serif;
+  }
+
+  body {
+    margin: 0;
+  }
+
+  main {
+    display: block;
+  }
+
+  header {
+    display: grid;
+    margin: 20px;
+  }
+
+  header input {
+    width: 100%;
+    max-width: 510px;
+    margin: auto;
+    height: 45px;
+    border: 2px solid #DDD;
+    border-radius: 5px;
+    padding: 0 10px;
+  }
+
 /* Wrappers */
 .wrapper-main {
-    margin: 0 20vw;
+    margin: auto;
 }
 
 .wrapper-gallery {
-    margin: 0 20vw;
+    margin: auto;
+    padding: 30px;
+    padding-top: 10px;
 }
 
 /* Gallery container */
 #index-gallery {
 	Display: grid;
+    max-width: 100%;
+    max-height: 100%;
 	Grid-template-columns: repeat(4, 1fr);
 	Grid-template-rows: auto;
     Grid-gap: 15px;
@@ -21,7 +56,9 @@
 
 #index-gallery .gallery-img {
     width: 100%;
-    height: 100px;
+    height: 170px;
+    background-position: center;
+    background-size: cover;
 }
 
 /* Images */
